# ADS-AutomaticDartScorer-

./: .gitignore  CMakeLists.txt  README.md
board_detection/: CMakeLists.txt
board_detection/include/board_detection/: board_detection.h
board_detection/src/: board_detection.cpp  color_detect.cpp  main.cpp
example/test_source/scripts/: test.py
example/test_source/src/: color_detect.cpp  hough_transform.cpp
include/board_detection/: board_detection.h
include/image_updator/: image_updator.h
include/tip_detection/: tip_detection.h
paper/: detection.md
references/test_code/board_detection/src/: main.cpp
references/test_code/image_updator/: CMakeLists.txt
references/test_code/image_updator/include/image_updator/: image_updator.h
references/test_code/image_updator/src/: image_updator.cpp  main.cpp
references/test_code/test_source/: CMakeLists.txt
references/test_code/test_source/scripts/: test.py
references/test_code/test_source/src/: camera_stabilization.cpp  histogram.cpp  sort.cpp  tip_detection.cpp
references/test_code/tip_detection/: CMakeLists.txt
references/test_code/tip_detection/src/: main.cpp  tip_detection.cpp
src/: board_detection.cpp  image_updator.cpp  main.cpp  tip_detection.cpp
test_source/: CMakeLists.txt
test_source/src/: background_substractor.cpp  camera_stabilization.cpp  main.cpp  video_capture.cpp  video_stabilization.cpp
tip_detection/: CMakeLists.txt
tip_detection/include/: color_detection.h
tip_detection/src/: camera_color_detect.cpp  color_detect.cpp
(+2 files in other folders)
